--- a/a_disturbing_novella.html
+++ b/a_disturbing_novella.html
@@ -25,10 +25,10 @@
     </style>
 </head>
 <body>
-<audio autoplay>
-        <source src="vcd.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
+<audio autoplay controls>
+  <source src="vcd.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
     <p>Peggy Benda, a woman whose platinum hair rivaled the gleam of her meticulously curated collection of designer handbags, considered her rent-controlled studio in New York City a quaint eccentric detail, not a financial necessity. “It’s about the <strong>address</strong>, darling,” she’d declare, adjusting a silk scarf that likely cost more than most people’s monthly rent. Her humor, much like a surprise root canal, was often excruciating and delivered without anesthetic. She adored Don Rickles, which was less a preference and more a blueprint for her daily interactions. Her main joy, aside from polishing her latest Birkin, was meticulously dissecting the online marriages of strangers, a hobby born from a profound lack of her own. This, she’d assure anyone within earshot, was perfectly compensated by her “modest pension” and “a few, you know, dozen degrees.”</p>
 
     <p>Thousands of miles away, in a digital ether Peggy likely believed was powered by pure chutzpah, lived Trip Khoade, a video producer whose actual production likely involved more cat videos than Cannes contenders. Their seven-year virtual love affair, a romance as substantial as a whisper in a hurricane, was an enigma. Peggy, in moments of extreme sentimentality, would coo, “My <strong>Trippypoo</strong>,” a term of endearment that made strong men blanch. Their passion was the stuff of legend, at least in Peggy’s mind, which was good, because it certainly wasn’t the stuff of reality. They’d never met, of course. Why spoil a perfectly good fantasy with, you know, actual human contact? Entonces,  there was an episode with Trippypoo's waterbed that is so disturbing it could never be included in even the darkest of novellas.</p>
