--- a/teaser.html
+++ b/teaser.html
@@ -1,3 +1,4 @@
+<title>Teaser</title>
 <div style="background: #fdf6e3; border: 2px solid #d2b48c; padding: 40px 30px; font-family: 'Georgia', serif; color: #3e2f1c; line-height: 1.6; border-radius: 20px; box-shadow: 0 0 15px rgba(0,0,0,0.2); max-width: 700px; margin: 40px auto; background-image: url('https://www.transparenttextures.com/patterns/aged-paper.png'); background-repeat: repeat;">
   <h2 style="font-size: 1.8em; text-align: center; margin-bottom: 20px; text-shadow: 1px 1px #ddd;">
     <em>Amor, frustración y conflicto: días oscuros, sin duda</em>
