--- a/The_Peggy_Chronicles.html
+++ b/The_Peggy_Chronicles.html
@@ -7,7 +7,7 @@
       <a href="https://bartstarr.github.io/diagnosis/newyorkstateofmind.html" target="_blank" style="color: #8b4513; text-decoration: none;">👜 New York State of Mind</a>
     </h2>
     <p style="margin: 5px 0 0 0; font-size: 1.05em;">
-      A vivid character study of Peggy Benda, the abrasive and insult-loving octogenarian whose rent-controlled kingdom doubles as her personal insult war room. A sarcastic deep-dive into luxury, loneliness, and lashing out.
+      A vivid character study of Peggy Benda, the abrasive and insult-loving octogenarian whose rent-controlled kingdom doubles as her personal insult war room. A deep-dive into luxury, loneliness, and lashing out.
     </p>
   </div>
 
@@ -16,7 +16,7 @@
       <a href="https://bartstarr.github.io/diagnosis/teaser.html" target="_blank" style="color: #8b4513; text-decoration: none;">📜 Teaser – Amor, frustración y conflicto: días oscuros, sin duda</a>
     </h2>
     <p style="margin: 5px 0 0 0; font-size: 1.05em;">
-      A sultry scroll-text teaser of the novella’s themes—lost love, misplaced rage, psychiatric leaks, and virtual vendettas. Told with the sharpness of a Don Rickles zinger and the flair of vintage leather.
+      A sultry scroll-text teaser of the novella’s themes—lost love, misplaced rage, psychiatric leaks, and virtual vendettas. Told with the sharpness of a chat-room zinger and the flair of vintage leather.
     </p>
   </div>
 
