Update Rodney_Jenkins_Obit .html

--- a/Rodney_Jenkins_Obit .html
+++ b/Rodney_Jenkins_Obit .html
@@ -63,7 +63,7 @@
 
   <p>Roddy is survived by his life partner, <strong>Alejandro Ratatoolie Fuentes</strong>, who brought love, financial stability, pool chlorine, and consistent STD screening into Roddy’s chaotic life. Also mourning his loss is best friend <strong>Dave Ateepee (Sarah)</strong>, who maintained daily contact through Roddy’s 56k dial-up connection for over two decades — a commitment stronger than most marriages.</p>
 
-  <p>Roddy’s twin brother, <strong>Lik Ick</strong>, survives him as well — genetically, phonetically, and unfortunately, behaviorally identical. His nephew <strong>Jack Netradio</strong>, fondly remembers Roddy’s enthusiasm for hand-me-downs clothes from “the closet,”</p>
+  <p>Roddy’s twin brother, <strong>Lik Ick</strong>, survives him as well — genetically, phonetically, and unfortunately, behaviorally identical. His nephew <strong>Jack Netradio</strong>, fondly remembers Roddy’s enthusiasm for hand-me-downs clothes from “the closet”</p>
 
   <p>His granddaughter, <strong>Jess Kash Rejester</strong> (aka “Ginger”), holds the distinct honor of being the only family member he remembered without a sticky note. And of course, his most unlikely confidante, <strong>Peggy Benda</strong> — a woman who transitioned from stalker victim to begrudging ally, sharing countless dramatic landline calls, broadcast rebuttals, and eventually, an oddly touching reconciliation. It was complicated. Just like her rotary phone induced finger injury(see Bobb for details).</p>
 
