Update Rodney_Jenkins_Obit .html

--- a/Rodney_Jenkins_Obit .html
+++ b/Rodney_Jenkins_Obit .html
@@ -61,7 +61,7 @@
 
   <p>Roddy was preceded in death by his long-suffering caretaker, Sam — not due to illness, but from the emotional toll of supplying Roddy with toilet paper during the Great COVID Shortage (because Roddy couldn't afford it, and honestly, probably wouldn’t have paid even if he could).</p>
 
-  <p>Roddy is survived by his life partner, <strong>Alejandro Ratatoolie Fuentes</strong>, who brought love, financial stability, pool chlorine, and consistent STD screening into Roddy’s chaotic life. Also mourning his loss is best friend <strong>Dave Ateepee (Sarah)</strong>, who maintained daily contact through Roddy’s 56k dial-up connection for over two decades — a commitment stronger than most marriages.</p>
+  <p>Roddy is survived by his life partner, <strong>Alejandro Ratatoolie Fuentes</strong>, who brought love, financial stability, pool chlorine, used for Roddys genital hygiene, and consistent STD screening into Roddy’s chaotic life. Also mourning his loss is best friend <strong>Dave Ateepee (Sarah)</strong>, who maintained daily contact through Roddy’s 56k dial-up connection for over two decades — a commitment stronger than most marriages.</p>
 
   <p>Roddy’s twin brother, <strong>Lik Ick</strong>, survives him as well — genetically, phonetically, and unfortunately, behaviorally identical. His nephew <strong>Jack Netradio</strong>, fondly remembers Roddy’s enthusiasm for hand-me-downs clothes from “the closet”</p>
 
