--- a/The_Peggy_Chronicles.html
+++ b/The_Peggy_Chronicles.html
@@ -1,6 +1,6 @@
 <title>The Peggy Chronicles</title>
 <div style="background: #fefaf5; padding: 40px; font-family: Georgia, serif; color: #3e2f1c; max-width: 800px; margin: 0 auto; border: 2px solid #d8b98a; border-radius: 15px; box-shadow: 0 0 12px rgba(0,0,0,0.15); background-image: url('https://www.transparenttextures.com/patterns/linen.png'); background-repeat: repeat;">
-  <h1 style="text-align: center; font-size: 2em; margin-bottom: 30px; color: #593c2e;">🗂️ Peggy Benda Digital Catalog</h1>
+  <h1 style="text-align: center; font-size: 2em; margin-bottom: 30px; color: #593c2e;">🗂️ Peggy Benda Digital Links Catalog</h1>
   
   <div style="margin-bottom: 25px;">
     <h2 style="margin: 0; font-size: 1.4em;">
