--- a/teaser.html
+++ b/teaser.html
@@ -1,4 +1,10 @@
 <title>Teaser</title>
+<div style="text-align: center; font-family: 'Georgia', serif; border-bottom: 1px solid #ccc; margin-bottom: 25px; padding-bottom: 10px;">
+  <span style="font-size: 0.95em; letter-spacing: 0.08em; color: #555;">From the Cultural Desk of</span><br>
+  <span style="font-size: 2em; font-weight: bold; color: #222; text-transform: uppercase;">The New York Times*</span><br>
+  <span style="font-size: 0.9em; color: #888;">*Definitely not actually affiliated. Please don’t sue.</span>
+</div>
+
 <div style="background: #fdf6e3; border: 2px solid #d2b48c; padding: 40px 30px; font-family: 'Georgia', serif; color: #3e2f1c; line-height: 1.6; border-radius: 20px; box-shadow: 0 0 15px rgba(0,0,0,0.2); max-width: 700px; margin: 40px auto; background-image: url('https://www.transparenttextures.com/patterns/aged-paper.png'); background-repeat: repeat;">
   <h2 style="font-size: 1.8em; text-align: center; margin-bottom: 20px; text-shadow: 1px 1px #ddd;">
     <em>Amor, frustración y conflicto: días oscuros, sin duda</em>
