--- a/teaser.html
+++ b/teaser.html
@@ -1,7 +1,7 @@
 <title>Teaser</title>
 <div style="text-align: center; font-family: 'Georgia', serif; border-bottom: 1px solid #ccc; margin-bottom: 25px; padding-bottom: 10px;">
   <span style="font-size: 0.95em; letter-spacing: 0.08em; color: #555;">From the Cultural Desk of</span><br>
-  <span style="font-size: 2em; font-weight: bold; color: #222; text-transform: uppercase;">The New Jerk Times*</span><br>
+  <span style="font-size: 2em; font-weight: bold; color: #222; text-transform: uppercase;">The New Jerk Times</span><br>
   <span style="font-size: 0.9em; color: #888;"><!--*Definitely not actually affiliated. Please don’t sue.--></span>
 </div>
 
