Update Rodney_Jenkins_Obit .html

--- a/Rodney_Jenkins_Obit .html
+++ b/Rodney_Jenkins_Obit .html
@@ -53,7 +53,10 @@
   </style>
 </head>
 <body>
-
+<audio autoplay controls>
+  <source src="ag.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio
   <h1>Rodney “Roddy” Ellsworth Jenkins</h1>
   <h2>1930 – 2025</h2>
 
