--- a/charges_filed.html
+++ b/charges_filed.html
@@ -176,7 +176,7 @@
     <p class="interview-title">Court Appearance & Bail Information</p>
     <p><strong>Court Date:</strong> June 12, 2025 — 10:00 AM EST</p>
     <p><strong>Location:</strong> Manhattan Supreme NetCourt, Digital Offense Division</p>
-    <p><strong>Presiding Judge:</strong> Hon. W. Firewall McGavel, Esq.</p>
+    <p><strong>Presiding Judge:</strong> Hon. R. Tyrone Jenkins, Esq., Civil Rights Advocate, Black Panther</p>
 
     <h4>Bail Conditions:</h4>
     <ul>
