--- a/charges_filed.html
+++ b/charges_filed.html
@@ -166,7 +166,7 @@
       <p><strong>Reviewed By:</strong> DA Leticia Bitrate, Esq.</p>
       <p class="signature-line">_____________________________<br>District Attorney – Manhattan Division</p>
 
-      <p><strong>Seal of Office:</strong></p>
+      <p><strong>Seal of Office:</strong> This makes it really official.</p>
       <p class="signature-line">[ ✪ EMBOSSED DIGITAL SEAL ✪ ]</p>
     </div>
   </div>
